Changed the background picture, and added 1 fact, and increased the size of everything by 1.5x.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <button id="generate-btn">Generate Fact</button>
 </div>
 
+<a href="https://www.freepik.com/free-vector/white-abstract-background_12980477.htm" class="attribution">Background image by freepik</a>
+
 <script src="script.js"></script>
 </body>
 </html>
