--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Useless Facts Generator</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/favicon.ico">
     <script src="https://kit.fontawesome.com/83ba28d01a.js" crossorigin="anonymous"></script>
 </head>
 <body>
