--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <button id="generate-btn">Generate Fact</button>
 </div>
 
-<a href="https://www.freepik.com/free-vector/white-abstract-background_12980477.htm" class="attribution">Background image by freepik</a>
+<a href="https://www.freepik.com/free-vector/white-abstract-background_12980477.htm" class="attribution">Never gonna give you up</a>
 
 <script src="script.js"></script>
 </body>
